cmake_minimum_required(VERSION 3.2)
project(aim_to_v)
set(CMAKE_CXX_FLAGS "-std=c++11 -lpthread -Wall")
set(CMAKE_BUILD_TYPE "Release")
include_directories("./include")
#aux_source_directory(./source SRC_SOURCE_LIST)
#list(REMOVE_ITEM SRC_SOURCE_LIST source/main.cpp)
#list(REMOVE_ITEM SRC_SOURCE_LIST source/http_server.cpp)
add_library(server_shared SHARED source/recv_thread.cpp source/read_thread.cpp source/group_info.cpp source/user_info.cpp source/common.cpp source/custom_data.cpp)
add_executable(aim_to_v source/main.cpp)
target_link_libraries(aim_to_v server_shared)
